--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,20 +15,16 @@ jobs:
         toolchain: stable
         override: true
     - name: Build
-      run: RUSTFLAGS="-D warnings" cargo build --verbose --all-targets --all-features
+      run: cargo build --verbose
     - name: Run tests
-      run: make test
+      run: cargo test --verbose
+    - name: Run example
+      run: cargo run
+
     - name: Build Documentation
-      run: RUSTDOCFLAGS="-D warnings" cargo doc --no-deps
-    - name: Run rustfmt
-      run: cargo fmt -- --check
-    - name: Run clippy
-      run: |
-        cargo clippy --all-targets --all-features -- --deny warnings
-        RUSTFLAGS='--cfg loom' cargo clippy --all-targets --all-features -- --deny warnings
+      run: cargo doc --no-deps
     - name: Deploy Docs
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./target/doc
-      if: github.ref == 'refs/heads/main'
